# icevault

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  env_file.rs  error.rs  main.rs  reference.rs
src/commands/: add.rs  delete.rs  export.rs  init.rs  list.rs  migrate.rs  mod.rs  run.rs  shred.rs
src/vault/: crypto.rs  model.rs
