[package]
name = "icevault"
version = "0.1.0"
edition = "2021"
description = "Local secret manager — store encrypted secrets, inject at runtime"
license = "MIT"
repository = "https://github.com/TU_USUARIO/icevault"

[[bin]]
name = "icevault"
path = "src/main.rs"

[dependencies]
clap             = { version = "4", features = ["derive"] }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
chacha20poly1305 = "0.10"
argon2           = "0.5"
zeroize          = { version = "1", features = ["derive"] }
rpassword        = "7"
rand             = "0.8"
subtle           = "2"
